<resources>
    <string name="app_name">LoveLink</string>
    <string name="serv_ip">http://92.51.39.4:8000</string>
    <string name="serv_apiKey">76067a4a-38d2-40dd-b012-99a147e27a11</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="autorization_button">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="authorization">Войти в аккаунт</string>
    <!-- AuthFragment1 -->
    <string name="enter_phone_number">Введите свой номер телефона</string>
    <string name="next">Далее</string>
    <string name="sms_warning">Вы получите на свой телефон сообщение с кодом, чтобы его подтвердить. За отправку сообщения может взиматься дополнительная плата.</string>
    <string name="response_error_message">Произошла ошибка! Проверьте введенные данные\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="enter_code_number">Введите полученный код</string>
    <string name="send_code_number_again">Отправить код повторно</string>
    <string name="send_code_number_again_success">Получить код повторно через:</string>
    <string name="second_abbreviated">сек.</string>
</resources>