<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorization.AuthorizationVerifyFragment">


    <TextView
        android:id="@+id/authVerify_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/enter_code_number"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/authVerify_button"
        style="@style/Widget.MaterialComponents.TimePicker.Button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/fragment_auth_buttton_next"
        android:text="@string/autorization_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/cursor_color"
        app:strokeColor="@color/fragment_auth_buttton_next" />

    <TextView
        android:id="@+id/authVerify_tv_phoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/authVerify_tv"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/authVerify_tv"
        app:layout_constraintTop_toBottomOf="@+id/authVerify_tv" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authVerify_tv_phoneNumber">

        <EditText
            android:id="@+id/authVerify_et1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="numberSigned"
            android:maxLength="1"
            android:textCursorDrawable="@color/cursor_color"
            android:textSize="48sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/authVerify_et2"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="numberSigned"
            android:maxLength="1"
            android:textCursorDrawable="@color/cursor_color"
            android:textSize="48sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/authVerify_et3"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="numberSigned"
            android:maxLength="1"
            android:textCursorDrawable="@color/cursor_color"
            android:textSize="48sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/authVerify_et4"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="numberSigned"
            android:maxLength="1"
            android:textColorHighlight="@color/highlight_text"
            android:textColorLink="@color/black"
            android:textCursorDrawable="@color/cursor_color"
            android:textSize="48sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/authVerify_et5"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="numberSigned"
            android:maxLength="1"
            android:textCursorDrawable="@color/cursor_color"
            android:textSize="48sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/authVerify_et6"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="numberSigned"
            android:maxLength="1"
            android:textCursorDrawable="@color/cursor_color"
            android:textSize="48sp"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/authVerify_et_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="start"
        android:text="@string/response_error_message"
        android:textColor="@color/error"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authVerifyButtonSendAgain" />

    <TextView
        android:id="@+id/authVerifyButtonSendAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/send_code_number_again"
        android:textColor="@color/send_code_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>